# ASEPythonCode

./: .rules  README.md  pyproject.toml
FirstTriangles/: WebGPUTriangle.py  WebGPUWidget.py
FirstTriangles/OpenGL/: OpenGLTriangle.py
FirstTriangles/Vulkan/: NumpyBufferWidget.py  VulkanTriangle.py  pyproject.toml
FirstTriangles/WebGPU/: WebGPUTriangle.py
GraphicsDemos/FirstTriangles/OpenGL/: OpenGLTriangle.py
GraphicsDemos/FirstTriangles/Vulkan/: NumpyBufferWidget.py  VulkanTriangle.py  main.py  triangle.frag  triangle.vert
GraphicsDemos/FirstTriangles/WebGPU/: NumpyBufferWidget.py  WebGPUTriangle.py
GraphicsDemos/FlatShaded/OpenGL/: OpenGLTriangleGrid.py  PhongFragment.glsl  PhongVertex.glsl
GraphicsDemos/FlatShaded/WebGPU/: PhongShaderWithWireFrame.wgsl  WebGPUTriangleGridWireFrame.py
GraphicsDemos/LineGrid/OpenGL/: LineVertex.glsl  OpenGLLines.py
GraphicsDemos/LineGrid/WebGPU/: LineShader.wgsl  LineShaderAA.wgsl  WebGPULines.py  WebGPULinesUnaliased.py  WebGPUWidget.py
GraphicsDemos/Points/OpenGL/: OpenGLPoints.py  PointFragment.glsl  PointVertex.glsl
GraphicsDemos/Points/Vulkan/: PointFragment.glsl  PointFragment.spv  PointVertex.glsl  PointVertex.spv  README.md  VulkanPoints.py  pyproject.toml
GraphicsDemos/Points/WebGPU/: NumpyBufferWidget.py  PointShader.wgsl  WebGPUPoints.py  WebGPUPointsDepthBuffer.py  WebGPUWidget.py
GraphicsDemos/TriangleGrid/OpenGL/: LineFragment.glsl  LineVertex.glsl  OpenGLTriangleGrid.py
GraphicsDemos/TriangleGrid/WebGPU/: TriShader.wgsl  TriShaderWithWireFrame.wgsl  WebGPUTriangleGrid.py  WebGPUTriangleGridWireFrame.py
GraphicsDemos/UpdateMesh/OpenGL/: OpenGLTriangleGrid.py
GraphicsDemos/UpdateMesh/WebGPU/: WebGPUTriangleGridWireFrame.py
Lab3/Vec3Class/: README.md  pyproject.toml  vec3.py
Lab3/Vec3Class/tests/: test_vec3.py
Lab4/Image/: README.md  pyproject.toml
Lab4/Image/src/image/: Image.py  ImageUint32.py  RGBA.py  __init__.py  __main__.py
Lab4/Image/tests/: test_Image.py  test_ImageUint32.py  test_RGBA.py
Lab4/ImageTest/: lines.py  main.py  pyproject.toml
Lab5/: BlitMT.py  Blitter.py  DLA.py  Image.py  pyproject.toml  run_profile.py
Lab5/tests/: test_image.py
Lab6/Particle/: Emitter.py  Particle.py  Vec3.py  houdini_version.py  main.py  pyproject.toml
Lab6/Particle/tests/: test_Emitter.py  test_Random.py  test_Vec3.py  test_particle.py
Lecture2/: Lecture2Marimo.py
Lecture3/: LSystem.py  elif.py  turtle_square.py
Lecture4/Accessors/: read_only.py
Lecture5/: IntroductionToNumpy.py  string_to_float.py
Lecture7/: ButtonClick.py  HelloPySide.py  LayoutDialog.py  LayoutMainWindow.py  MainWindow.py  MainWindowExtended.py  MultipleSignalsAndSlots.py  NestedLayout.py  SignalsAndSlots.py  SlotAsMethod.py  WebBrowser.py
Lecture8/Connetions/: main.py  main.qml
Lecture8/Reusable/: Reusable.qml  main.qml
Lecture8/SimpleQML/: hello.qml  hello_qml.py
