[project]
name = "asepythoncode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "marimo>=0.14.17",
    "numpy>=2.3.2",
]

[tool.uv.workspace]
members=["Lecture2","Lecture3","Lecture4","Lab3/Vec3Class/"]
exclude =["*"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
