[project]
name = "lab5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.3",
    "pillow>=11.3.0",
    "pyopengl>=3.1.10",
    "pyside6>=6.10.0",
    "image"
]



[tool.uv.sources]
image = { path = "../Lab4/Image" }
